src/test/ui/traits/issue-77982.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-77982.rs:8:10
   |
LL |     opts.get(opt.as_ref());
   |          ^^^ ------------ this method call resolves to `&T`
   |          |
   |          cannot infer type for type parameter `Q` declared on the associated function `get`
   |
   = note: cannot satisfy `String: Borrow<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-77982.rs:12:44
   |
LL |     let ips: Vec<_> = (0..100_000).map(|_| u32::from(0u32.into())).collect();
   |                                            ^^^^^^^^^ ----------- this method call resolves to `T`
   |                                            |
   |                                            cannot infer type for type parameter `T` declared on the trait `From`
   |
   = note: cannot satisfy `u32: From<_>`
   = note: required by `from`

error[E0283]: type annotations needed for `Box<T>`
  --> $DIR/issue-77982.rs:35:16
   |
LL |     let _ = ().foo();
   |         -      ^^^ cannot infer type for type parameter `T` declared on the trait `Foo`
   |         |
   |         consider giving this pattern the explicit type `Box<T>`, where the type parameter `T` is specified
   |
   = note: cannot satisfy `(): Foo<'_, _>`

error[E0283]: type annotations needed for `Box<T>`
  --> $DIR/issue-77982.rs:39:19
   |
LL |     let _ = (&()).bar();
   |         -         ^^^ cannot infer type for type parameter `T` declared on the trait `Bar`
   |         |
   |         consider giving this pattern the explicit type `Box<T>`, where the type parameter `T` is specified
   |
   = note: cannot satisfy `&(): Bar<'_, _>`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0283`.
